<?xml version="1.0" encoding="utf-8"?>
<!-- app/src/main/res/layout/item_workout_history.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/historyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#FFFFFF"
        android:text="@string/may_10_2025"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/historyMuscleGroups"
        android:text="@string/chest_triceps"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/historyEnergy"
            android:text="@string/energy"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/historyExerciseCount"
            android:text="@string/exercises_count"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailsButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:icon="@drawable/ic_info"
            app:iconTint="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeWidth="0dp"
            android:elevation="0dp"
            android:contentDescription="@string/details"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"/>
    </LinearLayout>
</LinearLayout>