<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="top"
    android:background="@color/white">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/theme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Spacer to push the text to the bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Developed by Nikola Ivanović"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />
</LinearLayout>