<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/exerciseNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:hint="@string/new_exercise"/>

            <ImageButton
                android:id="@+id/expandButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_drop_down"
                app:tint="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/setsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

            <Button
                android:id="@+id/addSetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_set"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/deleteExerciseButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>