<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/dateRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/select_date"
            android:textSize="16sp"
            app:icon="@drawable/ic_calendar"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteWorkoutButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:contentDescription="Delete"
            android:visibility="gone"
            android:padding="0dp"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/red"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/muscleGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/muscle_group"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_arrow_drop_down"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRow" />

    <TextView
        android:id="@+id/energyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/energy_after_workout"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muscleGroupButton" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/energyLabel">

        <RadioGroup
            android:id="@+id/energyRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/energy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/energy7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-8dp"
                android:padding="0dp"
                android:textColor="@color/black" />

        </RadioGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercisesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintBottom_toTopOf="@+id/addExerciseButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:icon="@drawable/ic_save"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_exercise"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>